--- a/Student_teaches/Lesson 3.8/2024-10-10-lesson-3-8.html
+++ b/Student_teaches/Lesson 3.8/2024-10-10-lesson-3-8.html
@@ -7525,7 +7525,7 @@ author: Ryan Nguyen
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
 <div style="border: 2px solid #336e9c; padding: 10px; border-radius: 5px; text-align: center;">
-<h2>🍿 Popcorn Hacks for Lesson 3.8</h2>
+<h2>Hacks for Lesson 3.8</h2>
 </div>
 </div>
 </div>
